[metadata]
name = usefixtures
version = 0.0.0
description = a code formatter rewriting pytest fixtures to use @pytest.mark.usefixtures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theendlessriver13/usefixtures
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = usefixtures
install_requires =
    tokenize-rt
python_requires = >=3.8

[options.entry_points]
console_scripts =
    usefixtures = usefixtures:main

[bdist_wheel]
universal = True

[coverage:report]
fail_under = 99

[coverage:run]
parallel = True
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
